--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -4,5 +4,4 @@ spring.datasource.password=postgrespw
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=false
-server.error.include-message=always
-server.error.include-stacktrace=never
+spring.jackson.deserialization.fail-on-unknown-properties=true
