--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -3,6 +3,7 @@ spring.datasource.username=postgres
 spring.datasource.password=postgrespw
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jackson.deserialization.fail-on-unknown-properties=true
 spring.jackson.date-format=yyyy-MM-dd
+spring.security.user.password=1234
